<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/activity_sub_textview_perimeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_sub_textview_perimeter"/>

    <TextView
        android:id="@+id/activity_sub_textview_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_sub_textview_area"/>

    <Button
        android:id="@+id/activity_sub_btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_sub_btn_back"/>

</LinearLayout>