<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/activity_main_edt_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/activity_main_hint_edt_width"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/activity_main_edt_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/activity_main_hint_edt_height"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/activity_main_btn_solve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_btn_solve"/>

    <TextView
        android:id="@+id/activity_main_textview_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>